add and change books for admin

--- a/book_store/templates/book_store/book/create.html
+++ b/book_store/templates/book_store/book/create.html
@@ -13,5 +13,5 @@
         <input class="btn btn-success" type="submit" value="Добавить книгу">
     </form>
 
-    <a class="btn btn-secondary" href="{% url 'book_list' object.pk %}">Назад</a>
+    <a class="btn btn-secondary" href="{% url 'book_list' %}">Назад</a>
 {% endblock %}
