--- a/book_store/templates/book_store/book/list.html
+++ b/book_store/templates/book_store/book/list.html
@@ -8,6 +8,8 @@
     <div>
         <h1>Список книг</h1>
         <a class="btn btn-primary" href="{% url 'home_index' %}">На главную страницу</a>
+        <a class="btn btn-primary" href="{% url 'book_add' %}">Добавить книгу</a>
+
         <div class="mb-4">
             {% for item in all_books %}
                 <div class="card" style="width: 18rem;">
@@ -17,7 +19,6 @@
                         <p class="card-text">{{ item.price }}</p>
                         <p class="card-text">{{ item.publication_date|date:"Y-m-d" }}</p>
                         <a class="btn btn-primary" href="{% url 'book_description' item.pk %}">Подробнее...</a>
-                        <a class="btn btn-primary" href="{% url 'book_add' item.pk %}">Добавить книгу</a>
                     </div>
                 </div>
             {% endfor %}
